# lava-frappe-sdk

./: LICENSE  pyproject.toml
lava-frappe-sdk/: pyproject.toml
lava-frappe-sdk/src/endpoints/: __init__.py
lava-frappe-sdk/src/endpoints/utils/: translation.py
lava-frappe-sdk/src/lava_frappe_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lava-frappe-sdk/endpoints/: api_endpoint.py
src/lava-frappe-sdk/endpoints/utils/: input_model_base.py  insights.py
